--- a/Algorithm/Leet Code/3. Roman to Integer.md
+++ b/Algorithm/Leet Code/3. Roman to Integer.md
@@ -44,10 +44,10 @@ class Solution {
 ### charAt()
 - String 으로 저장된 문자열 중에서 한 글자만 선택해서 char 타입으로 변환해줌
 	```java
-	String str = "hello world!"l
-	System.out.println(str.charAt(0));
+String str = "hello world!";
+System.out.println(str.charAt(0));
 ```
-	위 코드의 결과는 h 이다. 
+위 코드의 결과는 h 이다. 
 
 ### HashMap
 - Map Interface의 한 종류로 key - value 값으로 데이터를 묶어 저장할 수 있는 클래스
