--- a/AI Infrastructure/MLOps/모델 개발.md
+++ b/AI Infrastructure/MLOps/모델 개발.md
@@ -19,6 +19,45 @@
 2. strarified sampling
 3. weigth sampling
 4. importance sampling
+## Semi-supervised Learning 방법론
+### Self Training
+- 초기에 Labeling된 데이터로 모델을 훈련한 후, 모델이 높게 예측한 Labeling 없는 데이터에 적용하여 Labeling을 하고 모델을 학습하는 과정을 반복
+### Co Training
+- 데이터를 여러 독립적인 부분 집합 또는 도메인으로 나누어 모델을 학습하여, semi-supervised 학습에서의 데이터 부족 문제를 해결
+### Multi view Learning
+- 데이터를 여러 다른 관점 또는 특성을 나누어 모델을 학습
+- 데이터의 다양한 특성이 중요한 경우에 유용
+## Self-supervised Learning
+- Labeling된 데이터 없이도 모델을 훈련시키는 학습법
+- 데이터 내에서 숨겨진 정보를 활용하여 모델을 학습
+### Auto Encoder
+- 입력 데이터를 압축하고 다시 복원하는 네트워크 아케텍처로, encoder와 decoder로 구성
+- 모델은 입력 데이터를 압축하고 복원하는 과정에서 정보를 학습
+### Masked Language Model
+- 일부 단어를 가리고 해당 단어를 예측하는 Task를 활용
+- 모델은 문맥을 이해하고 숨겨진 단어를 예측하기 위해 단어 간의 관계를 학습
+- 자연어 처리 모델의 사전 훈련에 많이 쓰임
+### Contrastive Learning
+- 모델에서 유사한 데이터를 가깝게, 다른 데이터는 멀게 표현하도록 학습시키는 방법
+## 일반적인 모델 학습 유형
+### Transfer Learning
+- 이미 훈련된 모델을 다른 작업에 적용하는 방법
+- 사전 훈련된 모델은 대용량 데이터로 학습되어 다양한 특징을 추출하고, 이를 새로운 작업에 Transfer하는 데 사용
+### Fine Tuning
+- Transfer Learning의 한 형태로, 사전 학습된 모델을 새로운 작업에 맞게 미세 조정하는 과정
+- ex. GPT와 같은 모델에 자체적인 문서 분류, 감정 분석 데이터에 추가 학습시켜서 활용
+### Online Learning
+- 데이터를 순차적으로 처리하면서 모델을 업데이트하는 방식
+- 새로운 데이터가 도착할 때마다 모델은 finetune하며, 스트리밍 데이터나 지속적인 학습을 위해 유용
+###  Batch Learning
+- 데이터셋을 한번에 모델에 입력하는 전통적인 방식
+## Resampling
+### OverSampling
+1. SMOTE
+	1. 소수 클래스 데이터 포인트들을 기존 데이터를 활용하여 데이터를 균형화하는 방법
+2. ADASYN
+	1. 소수 클래스 데이터 포인트들을 기존 데이터를 활용하여 데이터를 균형화하는 방법
+	2. 소수 클래스 데이터 포인트의 가중치를 계산하고 높은 가중치를 가지는 데이터 포인트에 대해 더 많은 합성을 수행
 # 2. Feature Engineering
 - 데이터를 모델에 학습할 수 있는 형태로 Engineering
 - Data Cleansing, Feature Selection, Feature Reduction, Data Augmentation, Data Scaling & Encoding
